cabal-version:       2.0
name:                megaparsec-extra
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/aviaviavi/megaparsec-extra
bug-reports:         https://github.com/aviaviavi/megaparsec-extra/issues
license:             Apache-2.0
license-file:        LICENSE
author:              Avi Press
maintainer:          avipress@gmail.com
copyright:           2020 Avi Press
category:            parsing
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.6.5

source-repository head
  type:                git
  location:            https://github.com/aviaviavi/megaparsec-extra.git

library
  hs-source-dirs:      src
  exposed-modules:     MegaparsecExtra
                       

  build-depends:       base ^>= 4.12.0.0
                     

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010

test-suite megaparsec-extra-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       base ^>= 4.12.0.0
                     , megaparsec-extra
                     

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
